Syling in Grid and Fix Center Align Text

--- a/style.css
+++ b/style.css
@@ -3,6 +3,21 @@ html {
 	width: 100%;
 }
 
+* {
+	box-sizing: border-box;	
+}
+
+.container {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 1fr 1fr 1fr;
+	gap: 8px;
+}
+
+.row {
+	margin: 0;
+}
+
 .season-container {
 	margin-bottom: 30px;
 }
@@ -20,7 +35,7 @@ html {
 	object-fit: cover;
 }
 
-.month-card-body {
+.month-body {
 	padding: 15px;
 	text-align: center;
 }
